# FedAvg-FHEMK

./: .gitignore  README.md  experiment_config.py  experiments_config.toml  generate_analysis.py  generate_latex_tables.py  main.py  main_analysis.py  requirements.txt  run_article_experiments.py  run_experiments.py  run_test.py
analysis/: __init__.py  averager.py  data_utils.py  plotters.py  service.py  statistics.py
articles/: extract_maskcrypt_assets.py
articles/maskcrypt_extracted/text/: page_001.txt  page_002.txt  page_003.txt  page_004.txt  page_005.txt  page_006.txt  page_007.txt  page_008.txt  page_009.txt  page_010.txt  page_011.txt  page_012.txt  page_013.txt
experiments/baseline-fl/: README.md  pyproject.toml  sitecustomize.py
experiments/full_ckks-fl/: README.md  pyproject.toml  sitecustomize.py
experiments/full_ckks-fl/fl_simulation/: client_app.py  server_app.py
experiments/full_ckks-fl/fl_simulation/crypto/: ckks_context.py
experiments/full_ckks-fl/fl_simulation/model/: data_loader.py
experiments/full_ckks-fl/fl_simulation/strategies/: fed_avg_ckks.py
experiments/full_ckks-fl/keys/: context.ckks  private.key  public.key
experiments/full_ckks-fl/tests/: test_ckks_context.py  test_weights.py
experiments/new_ckks-fl/: .gitignore  README.md  example.ipynb  main.ipynb  pyproject.toml
experiments/new_ckks-fl/ckks/: main.py
experiments/new_ckks-fl/ckks/cryptogram/: main.py
experiments/new_ckks-fl/ckks/encoder/: main.py
experiments/new_ckks-fl/ckks/polynomials/: main.py  ntt.py
experiments/new_ckks-fl/ckks/sampler/: main.py
experiments/new_ckks-fl/fl_simulation/: __init__.py  ckks_instance.py  client_app.py  server_app.py
experiments/new_ckks-fl/fl_simulation/model/: __init__.py  model.py
experiments/new_ckks-fl/fl_simulation/strategies/: base.py  fedAvg.py
experiments/new_ckks-fl/tests/: test_ckks.py  test_nd_to_1d.py  test_polynomials.py  utils.py
experiments/selective_ckks-fl/: .gitignore  __init__.py  pyproject.toml
experiments/selective_ckks-fl/fl_simulation/: __init__.py  client_app.py  masking.py  server_app.py
experiments/selective_ckks-fl/fl_simulation/crypto/: __init__.py  ckks_context.py
experiments/selective_ckks-fl/fl_simulation/strategies/: selective_fed_avg.py
experiments/selective_ckks-fl/tests/: __init__.py  test_masking.py
model/: data_loader.py  model.py
models/: __init__.py  data_loader.py  loader.py  model.py  registry.py
models/common/: __init__.py  training.py  transforms.py  weights.py
models/mlp_mnist/: __init__.py  backend.py
models/resnet20_cifar10/: __init__.py  shared.py
models/resnet20_cifar10_iid/: __init__.py  backend.py
models/resnet20_cifar10_noniid/: backend.py
utils/: files.py  flatten.py  flwr_inline_backend.py  numbers.py  uuid.py  vandermode.py  weights.py
(+6 files in other folders)
