[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "full-ckks-fl"
version = "0.1.0"
description = "Flower CKKS Federated Learning demo"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.17.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "Pyfhel>=3.4.1",
    "numpy>=1.26.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "Gabriel Rosa"

[tool.flwr.app.components]
serverapp = "fl_simulation.server_app:app"
clientapp = "fl_simulation.client_app:app"

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.app.config]
num-server-rounds = 3
fraction-fit = 1.0
fraction-evaluate = 1.0
local-epochs = 1
is-encrypted = 1

[tool.flwr.federations.local-simulation]
options.num-supernodes = 4
